--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   height: 100%;
   width: 100%;
-  background-color: rgb(221, 221, 221);
+  background-color: var(--main-color);
   padding: 0.5rem;
   /* position: relative; */
 }
@@ -22,7 +22,7 @@
   bottom: 0;
   top: 0;
   right: 0;
-  background: #000;
+  background: var(--main-color);
   width: 50%;
   height: 100vh;
   text-align: center;
@@ -42,26 +42,32 @@
 .navItemsContainer a {
   text-transform: capitalize;
   font-size: bold;
-  color: rgb(11, 167, 154);
+  color: var(--fourth-color);
 }
 .btn {
   position: absolute;
   font-size: 25px;
   cursor: pointer;
   padding: 0;
-  top: 10px;
+  top: 5px;
   right: 10px;
   /* bottom: 0; */
   margin: 0;
   z-index: 100;
-  color: blue;
+  color: var(--third-color);
+}
+
+.logo {
+  font-weight: bolder;
+  color: var(--fourth-color);
 }
 
 @media screen and (min-width: 769px) {
   .navItemsContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0 0.2rem;
     gap: 1rem;
     height: 50%;
     background-color: transparent;
@@ -70,7 +76,6 @@
     top: 0;
     right: 0;
     text-align: center;
-    /* max-width: var(--mobile); */
   }
 
   .navItemsContainer li {
