--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -39,7 +39,8 @@
   margin: 0 auto;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .work {
@@ -54,6 +55,27 @@
 .work p {
   padding: 2rem;
   text-align: justify;
+}
+
+.faq > section {
+  background-color: var(--third-color);
+  padding: 1rem 0.5rem;
+  color: var(--main-color);
+  text-transform: capitalize;
+}
+
+.faq summary {
+  cursor: pointer;
+}
+
+.faq details {
+  margin: 1rem 0;
+}
+.faq details > p {
+  margin: 0.4rem 1rem;
+  padding: 0.4rem 1rem;
+  background-color: var(--second-color);
+  border-radius: 5px;
 }
 
 @media screen and (min-width: 769px) {
@@ -76,6 +98,8 @@
   }
 
   .intro p {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
     padding: 2rem;
     width: 100%;
@@ -99,7 +123,38 @@
   }
   .work:nth-child(even) {
     flex-direction: row-reverse;
-      box-shadow: -10px 10px 7px rgba(0, 0, 0, 0.1);
+    box-shadow: -10px 10px 7px rgba(0, 0, 0, 0.1);
+  }
 
+  .faq {
+    width: 90%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .faq img {
+    width: 100%;
+    height: 100%;
+  }
+  .faq > section {
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    border-radius: 12px;
+    box-shadow: 20px 20px 12px rgba(0, 0, 0, 0.5);
+  }
+  .faq summary {
+    cursor: pointer;
+  }
+
+  .faq details {
+    margin: 1rem 0;
+  }
+  .faq details > p {
+    margin: 0.4rem 1rem;
+    padding: 0.4rem 1rem;
+    background-color: var(--second-color);
+    border-radius: 5px;
   }
 }
