--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -42,7 +42,7 @@
 .navItemsContainer a {
   text-transform: capitalize;
   font-size: bold;
-  color: var(--fourth-color);
+  color: var(--fourth-color) !important;
 }
 .btn {
   position: absolute;
@@ -57,9 +57,12 @@
   color: var(--third-color);
 }
 
-.logo {
+.logo a {
+  color: var(--fourth-color) !important;
   font-weight: bolder;
-  color: var(--fourth-color);
+  text-transform: capitalize;
+  font-style: italic;
+  
 }
 
 @media screen and (min-width: 769px) {
