--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -68,6 +68,19 @@
   font-style: normal;
 }
 
+.tools {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tools li button {
+  font-size: 16px;
+  color: var(--third-color);
+  cursor: pointer;
+  margin: 0 2rem;
+}
+
 @media screen and (min-width: 769px) {
   .navItemsContainer {
     display: flex;
